# gtk-a11y-mcp

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: release.yml
plans/: tier-1-features.md  tier-2-features.md  tier-3-features.md
scripts/: install.sh
src/gtk_a11y_mcp/: lifecycle.py  server.py
tests/: test_lifecycle.py  test_tree_helpers.py
